# whatsapp-mcp

./: .dockerignore  .gitignore  .llmcomposeignore  Dockerfile  GitVersion.yml  README.md  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  llm-full.md  whatsapp_dashboard.py
.github/workflows/: docker-build.yml
public/: index.html
whatsapp-bridge/: main.go
whatsapp-mcp-server/: AUTO_RESPONDER_README.md  auto_responder.py  auto_responder_rules.json  auto_responder_rules.py  check_new_messages.py  dashborad.py  main.py  pyproject.toml  whatsapp.py
