[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "plotly>=5.18.0",
    "wordcloud>=1.9.3",
    "nltk>=3.8.1",
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.2",
]
